--- a/assets/styling/scss/comps/_footer.scss
+++ b/assets/styling/scss/comps/_footer.scss
@@ -2,11 +2,11 @@ body {
   footer.footer {
     padding: 80px 0 40px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $breakpoint-lg) {
       padding: 72px 0 36px;
     }
 
-    @media screen and (max-width: 991px) {
+    @media screen and (max-width: $breakpoint-md) {
       padding: 27px 0;
     }
 
@@ -17,8 +17,11 @@ body {
       .media-area {
         width: 40%;
 
-        @media screen and (max-width: 991px) {
+        @media screen and (max-width: $breakpoint-md) {
           width: 100%;
+        }
+        @media screen and (max-width: $breakpoint-sm) {
+          display: none;
         }
 
         figure.footer-image-wrapper {
@@ -26,7 +29,7 @@ body {
           margin: 0 10%;
           aspect-ratio: 350/400;
 
-          @media screen and (max-width: 991px) {
+          @media screen and (max-width: $breakpoint-md) {
             margin: 0;
           }
 
@@ -42,7 +45,7 @@ body {
         width: 60%;
         @include flex-column;
 
-        @media screen and (max-width: 991px) {
+        @media screen and (max-width: $breakpoint-md) {
           width: 100%;
         }
 
@@ -57,11 +60,11 @@ body {
             text-transform: uppercase;
             margin-bottom: 30px;
 
-            @media screen and (max-width: 991px) {
+            @media screen and (max-width: $breakpoint-md) {
               margin-bottom: 27px;
             }
 
-            @media screen and (max-width: 767px) {
+            @media screen and (max-width: $breakpoint-sm) {
               font-size: 14px;
             }
           }
@@ -73,7 +76,7 @@ body {
               row-gap: 20px;
               margin-bottom: 30px;
 
-              @media screen and (max-width: 991px) {
+              @media screen and (max-width: $breakpoint-md) {
                 margin-bottom: 27px;
                 gap: 27px;
               }
@@ -87,7 +90,7 @@ body {
                   font-weight: $medium;
                   transition: $transition;
 
-                  @media screen and (max-width: 991px) {
+                  @media screen and (max-width: $breakpoint-md) {
                     font-size: 27px;
                   }
 
@@ -115,10 +118,10 @@ body {
             column-gap: 30px;
             row-gap: 27px;
 
-            @media screen and (max-width: 1199px) {
+            @media screen and (max-width: $breakpoint-lg) {
               margin-bottom: 54px;
             }
-            @media screen and (max-width: 991px) {
+            @media screen and (max-width: $breakpoint-md) {
               margin-bottom: 27px;
             }
 
